* Added harp_convert_unit_double() and harp_convert_unit_float().
  harp_convert_unit() is now deprecated.

* Performing a unit conversion on single precision floating point
  variables will no longer convert the variable to double precision.

* Updates to product ingestions:
  - GOME2 L2: added support for NHP/OHP ozone profile products and all
    products now use float instead of double for variables.
  - GEOMS FTIR: reinterpret vmr from old GEOMS templates as dry air vmr.

1.24 2024-11-11
~~~~~~~~~~~~~~~

* Fixed appending non-float variables with different sub-dimensions when
  using the Python harp.concatenate() function.

* Updates to product ingestions:
  - ESACCI_GHG: fixed incorrect unit for CH4/CO variables
  - GOME-2 L2: added support for O3MARS aerosol layer height and added
    support for O3MARP V5
  - S5P L2: added snow_ice_type/sea_ice_fraction ingestion for AAI/CO/CH4
  - S5P L2 CH4: added 'corrected' option to ingest destriped columns and
    fixed issue in NIR/SWIR selection of surface albedo
  - S5P PAL L2: added support for SRON/SICOR HDO (L2__HDO__S) product

1.23 2024-07-30
~~~~~~~~~~~~~~~

* Fixed numpy 2.x compatibility issues in python interface.

* Added derivations to retrieve dry air mass/volume mixing ratio from H2O
  mass/volume mixing ratio with regard to dry air.

* Fixed some issues with building the HARP R interface extension.

* Updates to product ingestions:
  - S5P PAL L2 AOT: added support for cloud_fraction vs.
    effective_cloud_fraction split

1.22 2024-06-12
~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - EARLINET: fixed memory issue when reading extinction data.
  - EarthCARE: updates for new V11.2 format definition baseline
  - GEOMS UVVIS.DOBSON: fixed issue with reading of int16 typed data.
  - S5P PAL L2 SO2 COBRA: fixed cloud_fraction option behaviour and added
    alternative qa value calculation for processor V02.00.00.

1.21 2024-03-15
~~~~~~~~~~~~~~~
